# vagi-1

./: Cargo.toml  README.md  train.ipynb
.github/workflows/: build_trainer.yml
contracts/schemas/: chat-completions-response.schema.json
docs/: RUNBOOK.md
kernel/: Cargo.toml
kernel/src/: affect.rs  data_distiller.rs  homeostasis.rs  knowledge_graph.rs  lib.rs  main.rs  model_runtime.rs  models.rs  routes.rs  state_space.rs  trainer_engine.rs  world_model.rs
kernel/src/memory/: vector_store.rs
kernel/src/model/: gpt_kan.rs  lkan.rs  mod.rs
kernel/src/reasoning/: mcts.rs  mod.rs
lkan-poc/: Cargo.toml
lkan-poc/src/: main.rs
lkan-poc/src/model/: lkan.rs  mod.rs
ops/: dev.env
orchestrator/: README.md  pyproject.toml
orchestrator/tests/: test_app.py  test_dream.py  test_genesis_pipeline.py  test_reasoning.py  test_scanner.py
orchestrator/vagi_orchestrator/: __init__.py  app.py  cli.py  config.py  dream.py  kernel_client.py  memory.py  models.py  reasoning.py  scanner.py  store.py
orchestrator/vagi_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
orchestrator/vagi_orchestrator/genesis/: __init__.py  data_builder.py  model.py  pipeline.py  tokenizer.py
